--- a/assignment3_p2_starterkit/yolo_loss_debug_tool.ipynb
+++ b/assignment3_p2_starterkit/yolo_loss_debug_tool.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Error is 0.000000.\n- You pass the test for get_class_prediction!\n"
+     ]
+    }
+   ],
    "source": [
     "# load test cases\n",
     "func_name = 'get_class_prediction'\n",
@@ -84,10 +92,8 @@
     "class_target = input_data['classes_target']\n",
     "output_data = torch.load(\"test_cases/%s_output.pt\" % func_name)\n",
     "gt_loss = output_data['class_loss']\n",
-    "\n",
     "# calculate my implemented loss\n",
     "my_loss = yolo.get_class_prediction_loss(class_pred, class_target)\n",
-    "\n",
     "# test the difference between my loss and the gt loss\n",
     "loss_diff = torch.sum((gt_loss - my_loss) ** 2)\n",
     "test_error(loss_diff, test=func_name)"
@@ -105,9 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor(4.2675)\n",
+      "tensor(1.5927, device='cuda:0')\n",
+      "Error is 7.154899.\n",
+      "- emm.. something wrong. maybe double check your implemention.\n"
+     ]
+    }
+   ],
    "source": [
     "# load test cases\n",
     "func_name = \"get_regression\"\n",
@@ -116,9 +133,11 @@
     "box_target_response = input_data['box_target_response']\n",
     "output_data = torch.load(\"test_cases/%s_output.pt\" % func_name)\n",
     "gt_loss = output_data['reg_loss']\n",
+    "print(gt_loss)\n",
     "\n",
     "# calculate my implemented loss\n",
     "my_loss = yolo.get_regression_loss(box_pred_response.cuda(), box_target_response.cuda())\n",
+    "print(my_loss)\n",
     "\n",
     "# test the difference between my loss and the gt loss\n",
     "loss_diff = torch.sum((gt_loss - my_loss) ** 2)\n",
@@ -137,9 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor(13.9620)\ntensor(8.9354)\nError is 25.266783.\n- emm.. something wrong. maybe double check your implemention.\n"
+     ]
+    }
+   ],
    "source": [
     "func_name = \"get_contain_conf\"\n",
     "input_data = torch.load(\"test_cases/%s_input.pt\" % func_name)\n",
@@ -147,9 +174,11 @@
     "box_target_response_iou = input_data['box_target_response_iou']\n",
     "output_data = torch.load(\"test_cases/%s_output.pt\" % func_name)\n",
     "gt_loss = output_data['contain_loss']\n",
+    "print(gt_loss)\n",
     "\n",
     "# calculate my implemented loss\n",
     "my_loss = yolo.get_contain_conf_loss(box_pred_response, box_target_response_iou)\n",
+    "print(my_loss)\n",
     "\n",
     "# test the difference between my loss and the gt loss\n",
     "loss_diff = torch.sum((gt_loss - my_loss) ** 2)\n",
@@ -168,9 +197,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'no_object_loss' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-5ef27c97bd71>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# calculate my implemented loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mmy_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0myolo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_no_object_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget_tensor\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpred_tensor\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mno_object_mask\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# test the difference between my loss and the gt loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Payal\\Documents\\Fall_2020\\Deep_Learning\\ObjectDetection\\assignment3_p2_starterkit\\yolo_loss.py\u001b[0m in \u001b[0;36mget_no_object_loss\u001b[1;34m(self, target_tensor, pred_tensor, no_object_mask)\u001b[0m\n\u001b[0;32m    123\u001b[0m         \u001b[1;31m##### CODE #####\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    124\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 125\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mno_object_loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    126\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    127\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'no_object_loss' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# load test cases input\n",
     "func_name = \"no_object_loss\"\n",
@@ -257,9 +299,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "Python 3.8.6 64-bit",
+   "display_name": "Python 3.8.6 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "b556268c00d1fd48e7b8a0647e8ef739de37696dde2925bda6b5297920d66a44"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -271,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
